# coursework_module_2

./: pyproject.toml  user_settings.json
data/: Spending by category.csv  operations.xls  replies.json  search_result.json
src/: Spending by category.json  logger_config.py  main.py  pyproject.toml  replies.json  reports.py  services.py  utils.py  views.py
tests/: Spending by category.json  search_result.json  test_logger_config.py  test_operations.xls  test_reports.py  test_services.py  test_user_settings.json  test_utils.py  test_views.py
